--- a/mientras.html
+++ b/mientras.html
@@ -7,7 +7,12 @@
 </head>
 <body>
     <script>
-        
+//Bucle while o mientraas
+        let contador=1;
+        while(contador<=5){
+            document.write("Contador:  ",contador);
+            contador=contador+1;
+        }
     </script>
 </body>
 </html>
