--- a/parte1.html
+++ b/parte1.html
@@ -13,6 +13,8 @@
             suma=suma+numeros[i];
         }
         document.write("La suma del arreglo  es:  ",suma);
+        let promedio=suma/numeros.length;
+        document.write("El promedio de arreglo es:  ",promedio);
     </script>
 </body>
 </html>
