--- a/parte2.html
+++ b/parte2.html
@@ -7,7 +7,14 @@
 </head>
 <body>
     <script>
-        
+        let numero;
+        while(true){
+            numero=parseInt(prompt("Ingresa un número (Negativo para salir)  "));
+            if(numero<0){
+                break};
+            }
+        }
+        document.write("Haz salido del bucle!");
     </script>
 </body>
 </html>
