--- a/parte2.html
+++ b/parte2.html
@@ -11,7 +11,7 @@
         while(true){
             numero=parseInt(prompt("Ingresa un número (Negativo para salir)  "));
             if(numero<0){
-                break};
+                break;
             }
         }
         document.write("Haz salido del bucle!");
