--- a/parte3.html
+++ b/parte3.html
@@ -10,7 +10,7 @@
         let password;
         do{
             password=prompt("Ingrese la contraseña:  ");
-        }while(password="sesion12");
+        }while(password!="sesion12");
         console.log("Contraseña correcta !");
     </script>
 </body>
