--- a/parte3.html
+++ b/parte3.html
@@ -11,7 +11,7 @@
         do{
             password=prompt("Ingrese la contraseña:  ");
         }while(password!="sesion12");
-        console.log("Contraseña correcta !");
+        console.log("Contraseña correcta !")
     </script>
 </body>
 </html>
